style.css
*{
    font-family: 'Courier New';
    margin: 0;
}


.Top{
    position: sticky;
    top: 0;
    background: white;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-left: 15px;
    padding-right: 15px;
    padding-top: 10px;
    padding-bottom: 5px;
    
}

.logo{
    left: 0;
    width: 120px;
    height: 70px;
}

.cart{
    width: 65px;
    height: 50px;
}

.extra{
    display: flex;
    justify-content: space-between;   
}

.Sections{
    background-image: url(../Images/supermarket-4052658.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    width: 100%;
    flex-wrap: wrap;
    display: grid;
    grid-template-columns: repeat(3, 0.3fr);
    grid-template-rows: repeat(2, 0.3fr);
    gap: 20px;
    justify-content: flex-end;
}

.Sections div{
    height: 200px;
    align-items: center;
    background-color: aquamarine;
    width: 250px;
    margin-top: 35px;
    margin-bottom: 20px;
    border-radius: 1rem;
    text-align: center; 
    vertical-align: baseline;
    
}
.Sections div p{
    background-color: rgb(255, 255, 255);
    width: 100%;
    opacity: 50%;
    border-radius: 1rem 1rem 0 0 ;
}

.Sections .box{
    background-size: cover;
    background-position: center;
}

.Sections .box:hover{
    transform: scale(1.05);
    background-size: cover;
}

.Sections .box1{
    background-image: url(./Images/churros-2188869.jpg);
}
.Sections .box2{
    background-image: url(./Images/creme-366073_1280.jpg);
}
.Sections .box3{
    background-image: url(./Images/books-5937716.jpg);
}
.Sections .box4{
    background-image: url(./Images/cape-lode-2654051.jpg);
}
.Sections .box5{
    background-image: url(./Images/baby-stuff-5749669.jpg);
}
.Sections .box6{
    background-image: url(./Images/container-1838323_1920.jpg);
}


.Sections div:hover{
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.568), 0 6px 20px 0 rgba(0, 0, 0, 0.715);
    transform: scale(1, 1.2);
    text-transform: uppercase;
    font-weight: bolder;
}

.off-screen-menu {
    background-color: gray;
    height: 100vh;
    width: 100%;
    max-width: 450px;
    position: fixed;
    top: 0;
    right: -450px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    text-align: center;
    font-size: 3rem;
    transition: .3s ease;
}

.off-screen-menu.active{
    right: 0;
}

li{
    list-style: none;
}

.ham-menu{
    height: 50px;
    width: 50px;
    margin-left: auto;
    position: relative;    
}

.ham-menu span{
    height: 5px;
    width: 100%;
    background-color: black;
    top: 50%;
    left:50%;
    border-radius: 25px;
    position: absolute;
    transform: translate(-50%, -50%);
    transition: .3s ease;
}

.ham-menu span:nth-child(1){
    top: 25%;
    position: 25%;
}

.ham-menu span:nth-child(3){
    top: 75%;
}

.ham-menu.active span:nth-child(1){
    top: 50%;
    transform: translate(-50%, -50%) rotate(45deg);
}

.ham-menu.active span:nth-child(2){
    opacity: 0;
}
.ham-menu.active span:nth-child(3){
    top:50%;
    transform: translate(-50%, 50%) rotate(-45deg);
}


.Footer{
    display: grid;
    grid-template-columns: repeat(3, 0.3fr);
    grid-template-rows: repeat(2, 0.3fr);
    gap: 20px;
    justify-content: space-around;
}

.Footer div{
    background-color: white;
    margin-top: 20px; 
}

.Lago{
    margin-left: 15px ;
    left: 0;
    width: 120px;
    height: 70px;
}

footer{
    text-align: center;
}

